[package]
name = "proxy-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
wreq = { git = "https://github.com/0x676e67/wreq", branch = "main" }
wreq-util = { git = "https://github.com/0x676e67/wreq-util", branch = "main", features = ["tower-delay"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
chrono-tz = "0.10"
rand = "0.8"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"

[patch.crates-io]
wreq = { git = "https://github.com/0x676e67/wreq", branch = "main" }
